# optimal-prime

./: DistanceMatrixRank.hs  GoogleRequest.hs  OptimalPrime.cabal  README.md
app/: Main.hs
src/: DistanceMatrixRank.hs  GoogleRequest.hs  Lib.hs
test/: Spec.hs
