name:                OptimalPrime
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/WilliamDo/OptimalPrime#readme
license:             BSD3
license-file:        LICENSE
author:              William Do
maintainer:          example@example.com
copyright:           2017 William Do
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , statistics
                     , matrix
                     , aeson
                     , unordered-containers
                     , text
                     , bytestring
                     , HTTP
                     , network-uri
  default-language:    Haskell2010

executable OptimalPrime-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , OptimalPrime
  default-language:    Haskell2010

test-suite OptimalPrime-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , OptimalPrime
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/WilliamDo/OptimalPrime
